# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadatamapping"
version = "1.2.2"
description = "A python library to fetch metadata from NCBI and MetaSRA for a list of NCBI accessions and data extraction from ARCHS4"
readme = "README.md"
authors = [{ name = "Daniel Malzl", email = "daniel@menchelab.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["database", "metadata", "biopython", "bioinformatics"]
dependencies = [
    "biopython >= 1.81",
    "h5py >= 3.10.0",
    "pandas >= 2.1.3",
    "anndata >= 0.10.3",
    "unidecode >= 1.3.7",
    "obonet >= 1.0.0",
    "regex >= 2.5.135"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/dmalzl/metadatamapping"
